eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Wednesday_Session_Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Attended_by__c</fullName>
        <label>Attended by</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch_Documents__c</referenceTo>
        <relationshipLabel>Wednesday Session Attendances</relationshipLabel>
        <relationshipName>Wednesday_Session_Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Wednesday_Session__c</fullName>
        <label>Date of Wednesday Session</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key_topics_covered__c</fullName>
        <label>Key topics covered</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Wednesday Session Attendance</label>
    <nameField>
        <displayFormat>WSA{0000}</displayFormat>
        <label>Wednesday Session Attendance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wednesday Session Attendances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>